fix layout overflow bugs, adjust layout

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
   color: black;
 } */
 
-/* * {
+* {
   box-sizing: border-box;
-} */
+}
 
 html,
 body {
